--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,4 +15,16 @@
         <item name="android:textColorHint">#777777</item>
     </style>
 
+    <style name="UserInfoEditTextStyle">
+        <item name="android:background">@drawable/edit_text_bg</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#FFF</item>
+        <item name="android:textColorHint">#FFF</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+    <style name="AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
 </resources>
