--- a/app/src/main/res/layout/fragment_run.xml
+++ b/app/src/main/res/layout/fragment_run.xml
@@ -1,138 +1,146 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="#000"
-    android:layout_height="match_parent">
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="60"
-        android:background="#000"
-        >
-        <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:src="@drawable/icon_shezhi"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="10dp"
-            android:id="@+id/config"
-            />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="已获购物里币:"
-            android:textColor="#fff"
-            android:textSize="14sp"
-            android:id="@+id/money"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@id/config"
-            android:layout_marginTop="10dp"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:layout_toRightOf="@id/money"
-            android:layout_alignBottom="@id/money"
-            android:id="@+id/money_value"
-            android:text="700"
-            android:textColor="#fff"
-            android:layout_marginLeft="6dp"
-            />
-
-        <Chronometer
-            android:layout_width="270dp"
-            android:layout_height="100dp"
-            android:id="@+id/chronometer"
-            android:text="00:00:00"
-            android:textSize="80sp"
-            android:textColor="#fff"
-            android:layout_marginTop="30dp"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@id/money"
-            android:gravity="center"
-            />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="10dp"
-            >
-
-            <include
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                layout="@layout/unit_table"
-                android:id="@+id/km"
-                />
-            <include
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                layout="@layout/unit_table"
-                android:id="@+id/speed"
-                />
-            <include
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                layout="@layout/unit_table"
-                android:id="@+id/kacl"
-                />
-        </LinearLayout>
-    </RelativeLayout>
-
+    android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
-        android:background="@drawable/back"
-        android:layout_height="0dp"
-        android:layout_weight="40"
-        android:orientation="vertical"
-        >
+        android:layout_height="match_parent"
+        android:background="#000"
+        android:layout_centerInParent="true"
+        android:orientation="vertical">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="60"
+            android:background="#000">
+
+            <ImageView
+                android:id="@+id/config"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/icon_shezhi" />
+
+            <TextView
+                android:id="@+id/money"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/config"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"
+                android:text="已获购物里币:"
+                android:textColor="#fff"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/money_value"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@id/money"
+                android:layout_marginLeft="6dp"
+                android:layout_toRightOf="@id/money"
+                android:text="700"
+                android:textColor="#fff"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/chronometer"
+                android:layout_width="270dp"
+                android:layout_height="100dp"
+                android:layout_below="@id/money"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="30dp"
+                android:gravity="center"
+                android:text="00:00:00"
+                android:textColor="#fff"
+                android:textSize="80sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="10dp"
+                android:orientation="horizontal">
+
+                <include
+                    android:id="@+id/km"
+                    layout="@layout/unit_table"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+
+                <include
+                    android:id="@+id/speed"
+                    layout="@layout/unit_table"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+
+                <include
+                    android:id="@+id/kacl"
+                    layout="@layout/unit_table"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+            </LinearLayout>
+        </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="3"
-            >
-            <ImageView
+            android:layout_weight="40"
+            android:background="@drawable/back"
+            android:orientation="vertical">
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/btn_map"
-                android:layout_centerHorizontal="true"
-                android:id="@+id/btn_map"
-                android:layout_marginTop="18dp"
-                />
-        </LinearLayout>
+                android:layout_height="0dp"
+                android:layout_weight="3">
+
+                <ImageView
+                    android:id="@+id/btn_map"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="18dp"
+                    android:src="@drawable/btn_map" />
+            </LinearLayout>
 
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="7"
-            >
-            <ImageView
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/btn_go"
-                android:layout_centerHorizontal="true"
-                android:layout_below="@id/btn_map"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="20dp"
-                android:id="@+id/btn_run"
-                />
-        </LinearLayout>
+                android:layout_height="0dp"
+                android:layout_weight="7">
 
+                <ImageView
+                    android:id="@+id/btn_run"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_below="@id/btn_map"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="20dp"
+                    android:layout_marginTop="16dp"
+                    android:src="@drawable/btn_go" />
+            </LinearLayout>
+
+        </LinearLayout>
     </LinearLayout>
 
-</LinearLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/counter"
+        android:layout_centerInParent="true"
+        android:textSize="240sp"
+        android:textColor="#fff"
+        android:gravity="center"
+        android:visibility="gone"
+        />
+</RelativeLayout>
